# matrix-fuzz

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: docker-build-publish-fuzz_login.yml  docker_synapse_test_env.yml  test_known.yml
afl/createRoom/in/: 1  10  14  15  2  3  4  5  6  7  8  9
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  openapi.rs
crates/fuzz-targets/: Cargo.toml
crates/fuzz-targets/src/: lib.rs  types.rs
crates/fuzz-targets/src/types/: create_room.rs
dockerfiles/: docker-compose.yml  fuzz_login  synapse  synapse_config.yaml  synapse_generate_login.py  synapse_generate_mac.py  synapse_signing.key
src/: lib.rs  types.rs
src/fuzzTargets/: createRoom.rs
src/types/: create_room.rs
weird_ones/: 1.json
