[package]
edition = "2021"
name = "matrix-fuzz"
version = "0.1.0"

[lib]
name = "matrix_fuzz"
path = "src/lib.rs"

[[bin]]
name = "createRoom"
path = "src/fuzzTargets/createRoom.rs"

[dependencies]
afl = "*"
arbitrary = {version = "1", features = ["derive"]}
fuzzcheck = {git = "https://github.com/MTRNord/fuzzcheck-rs.git", branch = "patch-1"}
once_cell = "1.13.0"
reqwest = {version = "0.11.11", features = ["blocking", "json", "gzip"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.83"
