[package]
edition = "2021"
name = "matrix-fuzz"
version = "0.1.0"

[lib]
name = "matrix_fuzz"
path = "src/lib.rs"

[[bin]]
name = "createRoom"
path = "src/fuzzTargets/createRoom.rs"

[dependencies]
afl = "*"
arbitrary = {version = "1", features = ["derive"]}
cfg-if = "0.1"
fuzzcheck = {git = "https://github.com/MTRNord/fuzzcheck-rs.git", branch = "patch-1"}
fuzzcheck_serde_json_generator = {version = "0.1.0", git = "https://github.com/teymour-aldridge/fuzzcheck_generators.git", branch = "main"}
once_cell = "1.13.0"
reqwest = {version = "0.11.11", features = ["blocking", "json", "gzip"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.83"

[patch.crates-io]
fuzzcheck = {git = "https://github.com/MTRNord/fuzzcheck-rs.git", branch = "patch-1"}

[patch.'https://github.com/loiclec/fuzzcheck-rs']
fuzzcheck = {git = "https://github.com/MTRNord/fuzzcheck-rs.git", branch = "patch-1"}

[features]
default = ["fuzzing", "password_auth"]
fuzzing = []
password_auth = []
token_auth = []
