[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = "2.0"
quote = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
proc-macro2 = "1.0.67"
convert_case = "0.6.0"
okapi = "0.7.0-rc.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

[lib]
proc-macro = true
