[package]
edition = "2021"
name = "matrix-fuzz"
version = "0.1.0"

[lib]

[dependencies]
cfg-if = "1"
fuzzcheck = { git = "https://github.com/MTRNord/fuzzcheck-rs.git", branch = "patch-1" }
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "json",
    "gzip",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
codegen = { path = "../codegen" }
arbitrary = { version = "1.3.0", features = ["derive"] }

[features]
default = ["fuzzing", "password_auth"]
fuzzing = []
password_auth = []
token_auth = []
